--- a/Twitch-Pet/main.html
+++ b/Twitch-Pet/main.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<body>
-
-</body>
 <head>
-
+    <link rel="icon" href="./Assets/favicon.png">
 </head>
+<body style="background-color:transparent">
+<img>
+</body>
 <script>
-    
+
 </script>
