--- a/Twitch-Pet/main.html
+++ b/Twitch-Pet/main.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
-<head>
+<head>\
+    <script src="tmi.min.js">//TMI.js script</script>
+    <script src="./config.js"></script>
+    <script src="./script.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"
+      integrity="sha512-WIklPM6qPCIp6d3fSSr90j+1unQHUOoWDS4sdTiR8gxUTnyZ8S2Mr8e10sKKJ/bhJgpAa/qG068RDkg6fIlNFA=="
+      crossorigin="anonymous"
+    ></script>
     <link rel="icon" href="./Assets/favicon.png">
 </head>
 <body style="background-color:transparent">
-<img>
+<img src="./Assets/idle.gif" id="petgif">
+<img src="./Assets/idle.png" id="petpng">
+<img src="./Assets/idle.jpg" id="petjpg">
 </body>
 <script>
 
